--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --font-heading: "Sen", sans-serif;
+  --primary-color: #ffb900;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -24,8 +29,12 @@ a {
   color: #fff;
   text-align: center;
   font-weight: 600;
-  border-radius: 24.5px;
+  border-radius: 999px;
   background-color: #171100;
+}
+
+.btn:hover {
+  opacity: 0.9;
 }
 .main-content {
   width: 1170px;
@@ -40,6 +49,7 @@ a {
 }
 
 .header.fiexd {
+  z-index: 1;
   position: sticky;
   top: -28px;
 }
@@ -86,4 +96,162 @@ a {
 
 .header .action {
   margin-left: 49px;
+}
+
+/* ============hero */
+.hero {
+  padding: 58px 0 65px;
+  background-color: #fffcf4;
+}
+
+.hero .body {
+  display: flex;
+}
+
+/* ========= hero left ====== */
+.hero .media-block {
+  width: 48%;
+  position: relative;
+}
+
+.hero .media-block .img {
+  width: 470px;
+  height: 685px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.hero .hero-summary {
+  position: absolute;
+  bottom: 48px;
+  right: 0;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 16 32 0 rgba(0, 0, 0, 0.05);
+  width: 270px;
+  padding: 24px;
+}
+
+.hero-summary .item {
+  display: flex;
+  align-items: center;
+}
+
+.hero-summary .item + .item {
+  margin-top: 22px;
+}
+.hero-summary .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: #fff9e8;
+}
+
+.hero-summary .icon2 {
+  background-color: #fcefff;
+}
+
+.hero-summary .icon3 {
+  background-color: #ebeaff;
+}
+
+.hero-summary .info {
+  margin-left: 16px;
+}
+
+.hero-summary .lable {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 26px;
+}
+
+.hero-summary .title {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 30px;
+}
+
+/* ===== hero right ======== */
+.hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 64px;
+}
+
+.hero .heading {
+  font-family: var(--font-heading);
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 68px;
+  letter-spacing: -0.02em;
+  color: #171100;
+}
+
+.hero .decs {
+  font-size: 1.8rem;
+  line-height: 30px;
+  margin-top: 22px;
+}
+
+.hero .cta-group {
+  /* display: flex; */
+  display: flex;
+  margin-top: 38px;
+}
+.hero-cta {
+  width: 180px;
+  background-color: var(--primary-color);
+  line-height: 64px;
+}
+
+.hero .watch-video {
+  margin-left: 28px;
+  border: none;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.hero .watch-video .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px #00000012;
+}
+
+.hero .watch-video span {
+  margin-left: 14px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 30px;
+  color: #171100;
+}
+
+.hero .decs {
+  margin-top: 48px;
+}
+
+.hero .stats strong {
+  margin-right: 15px;
+  font-family: var(--font-heading);
+  font-size: 4.4rem;
+  font-weight: 700;
+  line-height: 54px;
+  color: #171100;
+}
+
+.hero .stats {
+  margin-top: 8px;
+}
+.hero .stats strong:nth-child(2) {
+  margin-left: 28px;
 }
