--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,14 @@ a {
   text-decoration: none;
 }
 
+.heading-lv2 {
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -0.02em;
+  color: #171100;
+}
 .btn {
   display: inline-block;
   min-width: 118px;
@@ -254,4 +262,44 @@ a {
 }
 .hero .stats strong:nth-child(2) {
   margin-left: 28px;
+}
+
+/* ============popular========= */
+.popular {
+  padding: 65px 0;
+  margin-top: 135px;
+}
+
+.popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular-top .decs {
+  margin-top: 16px;
+  font-size: 1.8rem;
+  line-height: 30px;
+  color: #5f5b53;
+}
+
+.popular-top .controls {
+  display: flex;
+  gap: 18px;
+}
+.popular-top .control-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.popular-top .control-btn:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+  cursor: pointer;
 }
