--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ a {
 
 .btn:hover {
   opacity: 0.9;
+  cursor: pointer;
 }
 .main-content {
   width: 1170px;
@@ -280,6 +281,7 @@ a {
   font-size: 1.8rem;
   line-height: 30px;
   color: #5f5b53;
+  width: 485px;
 }
 
 .popular-top .controls {
@@ -302,4 +304,91 @@ a {
   background-color: var(--primary-color);
   color: #fff;
   cursor: pointer;
+}
+
+.popular .course-list {
+  margin-top: 55px;
+  display: flex;
+  gap: 30px;
+}
+
+.popular .course-item {
+  border: 1px solid #e2dfda;
+  background-color: #fff;
+  border-radius: 12px;
+}
+
+.popular .course-item:hover {
+  border: 1px solid transparent;
+  box-shadow: 0px 18px 36px 0px #0000000d;
+  background-color: #fff;
+  border-radius: 12px;
+}
+
+.popular .course-item .thumb {
+  width: 100%;
+  border-radius: 12px 12px 0px 0px;
+  object-fit: cover;
+}
+
+.popular .course-item .info {
+  padding: 16px 22px 22px;
+}
+
+.popular .course-item .head {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.popular .course-item .foot,
+.popular .course-item .rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular .course-item .start {
+  width: 18px;
+  height: 18px;
+}
+.popular .course-item .title a {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 30px;
+}
+
+.popular .course-item .value {
+  margin-left: 6px;
+  font-size: 1.6rem;
+  line-height: 28px;
+  color: var(--primary-color);
+}
+
+.popular .course-item .decs {
+  margin-top: 6px;
+  color: #5f5b53;
+  font-family: Poppins;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.popular .course-item .foot {
+  margin-top: 12px;
+}
+
+.popular .course-item .price {
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 30px;
+  color: #171100;
+}
+
+.popular .course-item .btn-book {
+  border: none;
+}
+
+.popular .course-item .btn-book:hover {
+  background-color: var(--primary-color);
 }
