--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,3 +482,53 @@ a {
   font-style: italic;
   line-height: 40px;
 }
+
+/* =============features=================== */
+.features {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+
+.features .body {
+  display: flex;
+  justify-content: space-between;
+}
+
+.features .images img {
+  display: flex;
+  width: 270px;
+  height: 404px;
+  border-radius: 16px;
+  object-fit: covers;
+}
+
+.features .images {
+  display: flex;
+  gap: 30px;
+}
+
+.features .lower {
+  margin-top: 35px;
+}
+
+.features .content {
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.features .desc {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+
+.features .btn {
+  margin-top: 32px;
+  width: 137px;
+  height: 50px;
+  border-radius: 26px;
+  background: var(--primary-color);
+}
