--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,7 +483,7 @@ a {
   line-height: 40px;
 }
 
-/* =============features=================== */
+/* =============features 1=================== */
 .features {
   margin-top: 135px;
   padding: 65px 0;
@@ -531,4 +531,23 @@ a {
   height: 50px;
   border-radius: 26px;
   background: var(--primary-color);
+}
+
+/* =============features 2=================== */
+.features-2nd {
+  margin-top: 70px;
+}
+
+.features-2nd .body {
+  flex-direction: row-reverse;
+}
+
+.features-2nd .images img {
+  width: 470px;
+  height: 440px;
+  object-fit: cover;
+}
+
+.features-2nd .content {
+  width: 49%;
 }
