p13 code blog #2 -finish

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,12 +574,16 @@ a {
 .blogs .blog-list {
   display: flex;
   margin-top: 55px;
+  overflow: hidden;
   gap: 30px;
 }
 
 .blogs .item {
-  width: 33.33%;
+  width: calc(33.33% - 20px);
   background-color: #fff;
+  flex-shrink: 0;
+  transition: all ease 0.5s;
+  transform: translateX(-100%);
 }
 
 .blogs .item:hover {
@@ -639,8 +643,29 @@ a {
 
 .blogs .item .btn {
   margin-top: 12px;
+  font-size: 1.4rem;
 }
 
 .blogs .item .btn:hover {
   background: var(--primary-color);
+}
+
+.blogs .dots {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+  margin-top: 38px;
+}
+
+.blogs .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #5f5b53;
+  cursor: pointer;
+}
+
+.blogs .dot.active {
+  background: var(--primary-color);
+  cursor: default;
 }
