--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,3 +669,76 @@ a {
   background: var(--primary-color);
   cursor: default;
 }
+
+/* =============== Footer */
+footer {
+  background-color: #2e2100;
+  padding: 96px 135px 0;
+}
+
+.footer .row {
+  padding-bottom: 38px;
+  border-bottom: 1px solid #59554b;
+  display: flex;
+}
+
+.footer .row .column {
+  width: 21.6%;
+}
+.footer .row .column:first-child {
+  width: 35%;
+}
+
+.footer .desc {
+  margin-top: 18px;
+  max-width: 267px;
+  font-size: 1.4rem;
+  line-height: 26px;
+  color: #bfbcb2;
+}
+.footer .socials {
+  display: flex;
+  gap: 18px;
+  margin-top: 18px;
+}
+
+.footer .title {
+  display: inline-block;
+  padding-bottom: 14px;
+  padding-right: 48px;
+  border-bottom: 1px solid #59554b;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 28px;
+  color: #fff;
+}
+
+.footer .list {
+  margin-top: 28px;
+}
+
+.footer .list a {
+  display: inline-block;
+  margin-bottom: 12px;
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  line-height: 26px;
+}
+.footer .list a:first-child {
+  margin-bottom: 0;
+}
+
+.footer .list strong {
+  font-size: 1.4rem;
+  font-weight: 600;
+  line-height: 26px;
+  color: #fff;
+}
+
+.footer .copyright {
+  padding: 28px 0 28px;
+  font-size: 1.4rem;
+  line-height: 26px;
+  text-align: center;
+  color: #807d74;
+}
